...
    <string name="expense_overview_title">Expense Overview</string>
    <string name="template_add_title">Add Template</string>
    <string name="template_edit_title">Edit Template</string>
    <string name="template_overview_title">Template Overview</string>

    <!-- Menu items -->
    <string name="add_account">Add Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="account_overview">Home</string>
    <string name="view_map">Map</string>
    <string name="view_report">Reports</string>

    <!-- Template -->
    <string name="template_delete">Delete</string>
    <string name="template_overview">Templates</string>

    <!-- Add Account Items -->
    <string name="account_name">Name</string>
    <string name="account_type">Type</string>
    <string name="account_initbalance">Initial Balance</string>
    <string name="account_currency">Currency</string>
    <string name="account_delete">Delete</string>
    <string name="accounts">Accounts</string>
    <string-array name="account_types">
        <item>Cash</item>
        <item>Bank</item>
        <item>Credit Card</item>
...
    <string-array name="currencies">
        <item>EUR</item>
        <item>USD</item>
    </string-array>

    <string name="add_expense">Add Expense</string>
    <string name="add_template">Add Template</string>

    <!-- Add Expense Items -->
    <string name="expense_name">Name</string>
    <string name="expense_category">Category</string>
    <string name="expense_account">Account</string>
    <string name="expense_value">Value</string>
    <string name="expense_date">Date</string>
    <string name="expense_account_label">Account</string>
    <string name="expense_category_label">Category</string>
    <string name="expense_value_label">Value</string>
    <string name="expense_date_label">Date</string>
    <string name="dummy_date">2000-01-01</string>
    <string name="expense_name_label">Name</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="edit">Update</string>
    <string name="add_category">Add Category</string>
    <string name="category_overview">Categories</string>
    <string name="take_picture">Use Camera</string>
    <string name="select_picture">Select a picture</string>
    <string name="category_overview_title">Category Overview</string>
    <string name="add_category_title">Add category</string>

    <string-array name="expense_categories">
...
    <string-array name="expense_accounts">
        <item>dummy1</item>
        <item>dummy2</item>
    </string-array>

    <!-- Report Stuff -->
    <string name="report_account">Account Statistics</string>
    <string name="report_category">Category Statistics</string>
    <string name="report_other">Other</string>

    <string-array name="expense_filter_array">
        <item>all</item>
        <item>last 1 month</item>
        <item>last 3 months</item>
...
