<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/fragment_account_form"
    android:layout_height="match_parent"
    android:background="#CFF000"
    >

</LinearLayout>
