<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/fragment_template_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expense_name"
                android:hint="@string/expense_name_label"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/expense_account_label"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:entries="@array/expense_accounts"
                android:id="@+id/expense_account_type_spinner">
            </android.support.v7.widget.AppCompatSpinner>

        </LinearLayout>



        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:entries="@array/expense_categories"
            android:id="@+id/expense_category_spinner">
        </android.support.v7.widget.AppCompatSpinner>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expense_value"
                android:inputType="numberSigned|numberDecimal"
                android:hint="@string/expense_value_label"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:gravity="end">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="@style/Base.Widget.AppCompat.Button.Borderless" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                style="@style/Base.Widget.AppCompat.Button.Borderless" />
             <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_save_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveAndBack"
                style="@style/Base.Widget.AppCompat.Button.Borderless" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                style="@style/Base.Widget.AppCompat.Button.Borderless" />

        </android.support.v7.widget.ButtonBarLayout>


    </LinearLayout>
</ScrollView>